GNOME Bugzilla – Bug 758694
android media fails to update affine transformation meta
Last modified: 2015-11-26 11:46:01 UTC
Created attachment 316292 [details] [review] Trivial patch to the problem The video decoders tried calling gst_buffer_add() on locked GL sync buffer resulting in warnings of of this kind: gstamcvideodec.c:921 (_gl_sync_render_unlocked): WARNING: amcvideodec Failed to create the transformation meta for the gl_sync 0xabc03848 buffer 0xabb01b40 (0)
commit d387bfd188a15cbb6fcb9e2c3e2893ea3a7d9414 Author: Mathias Hasselmann <mathias.hasselmann@kdab.com> Date: Thu Nov 26 10:15:36 2015 +0100 androidmedia: Don't add metadata to locked buffer The video decoders tried calling gst_buffer_add_*meta() on non-writable buffer resulting in warnings of this kind: gstamcvideodec.c:921 (_gl_sync_render_unlocked): WARNING: amcvideodec Failed to create the transformation meta for the gl_sync 0xabc03848 buffer 0xabb01b40 (0) https://bugzilla.gnome.org/show_bug.cgi?id=758694